--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "leepe/api-plex",
   "keywords": ["plex", "api"],
   "homepage": "https://github.com/leepeuker/plex-api",
+  "license": "MIT",
   "authors": [
     {
       "name": "Lee Peuker",
