--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     }
   ],
   "require": {
+    "ext-json": "*",
     "php": "^7.4",
     "guzzlehttp/psr7": "^1.6",
     "php-http/guzzle6-adapter": "^2.0",
