--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
   },
   "require-dev": {
     "phpstan/phpstan": "^0.11.19",
+    "phpstan/phpstan-phpunit": "^0.11.2",
     "phpunit/phpunit": "^8",
     "psalm/plugin-phpunit": "^0.7.0",
     "roave/security-advisories": "dev-master",
@@ -30,7 +31,7 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "PlexApi\\Tests\\": "tests/"
+      "PlexApi\\Tests\\Unit\\": "tests/unit"
     }
   },
   "config": {
